<resources>
    <string name="app_name">Rosary Bank</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="new_user">Please register in Rosary Bank with your email and any password</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Delete Account</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Rosary Bank now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Please enter your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_deposit_rosary">DepositRosaryActivity</string>
    <string name="account_balance"><u>Account Summary</u></string>
    <string name="banner_ad_unit_id">ca-app-pub-7271379408439527/4448521952</string>
    <string name="Rewardvideo_ad_unit_id">ca-app-pub-7271379408439527/7826956778</string>
    <string name="Fullpage_ad_unit_id">ca-app-pub-7271379408439527/7369460073</string>
    <string name="testvideo_ad_unit_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="app_id"> ca-app-pub-7271379408439527~6992415500</string>
    <string-array name="rosary_type">
        <item>Normal Rosary</item>
        <item>Mercy Rosary</item>
    </string-array>
    <string-array name="rosary_request_type">
        <item>Normal</item>
        <item>Urgent</item>
        <item>Critical</item>
    </string-array>
    <string-array name="dedicated_to">
        <item>Rosary Bank</item>
        <item>Other People</item>
        <item>Organisation</item>
        <item>Personal</item>
    </string-array>
    <string-array name="Request_Queue_type">
        <item>Global</item>
        <item>JesusYouth</item>
    </string-array>
    <string name="facebook_app_id">1960893827462071</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="my_cart">Notifications</string>
    <string name="delete">DELETE</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">DEVOTIONAL PRAYERS</string>
    <string name="backdrop_subtitle">All the Christian Prayers</string>
    <string name="title_activity_rosary_prayer">RosaryPrayer</string>
    <string name="rosary_english_annunciation">
        "The time for the Incarnation is at hand.
        Of all women God prepared Mary from her conception to be the Mother of the Incarnate Word.
        The Angel Gabriel announces: Hail, full of grace! The Lord is with thee.
        Mary wonders at this salutation.
        The Angel assures her: "Fear not .. you shall conceive in your womb, and give birth to a Son."
        Mary is troubled for she has made a vow of virginity.
        The Angel answers that she will conceive by the power of the Holy Spirit, and her Son will be called the Son of God.
        The Incarnation awaits Mary's consent.
        Mary answers: "Behold the handmaid of the Lord. Be it done unto me according to your word."
        The Word was made flesh and dwelt among us.

        Dear Mary, when the angel gave you a message that God wanted you to conceive Jesus, the savior,
        you said yes to Him without questioning your well-being.  You were engaged to Joseph,
        you knew you could be stoned to death,  you knew people would not like you,
        but you trusted God fully because you knew He knows better and has your best interest at heart no matter what happens.
        Even if you would suffer. Pray for me too, that I may be humble like you and accept God's Will in my life,
        no matter what that is. Also, pray for me that I may have the discernment to know His Will,
        and to live as a reflection of His commandments, especially the greatest of all Jesus left us,
        "Love God above, and neighbor as I love myself"!

        <b>\nOur Father.. \t\t10Hail Mary"'"s \t\tGlory be.."</b>

    </string>
    <string name="rosary_english_visitation">
        "Mary's cousin Elizabeth conceived a son in her old age.. for nothing is impossible with God.
        Charity prompts Mary to hasten to visit Elizabeth in the hour of her need.
        The journey to Elizabeth's home is about eighty miles requiring four or five days.
        Though long and arduous, the journey is joyous, for Mary bears with her the Incarnate Word.
        At Mary's salutation, John the Baptist is sanctified in his mother's womb.
        Elizabeth exclaims: "Blessed are you among women, and blessed is the fruit of your womb."
        "How have I deserved that the mother of my Lord should come to me?"
        "Blessed is she who believed that the "Lord's" words to her would be fulfilled."
        Mary replies: "My soul proclaims the greatness of the Lord, and my spirit finds joy in God my Savior."
        Mary serves her cousin in all humility for three months until the birth of John the Baptist.

        Dear Mary even though you were pregnant, you rushed to go to help your cousin Elizabeth who needed more help.
        Despite your cousin being older, she knelt before you calling you "Blessed Among Women",
        honored that the Mother of God would visit her. Dear Mother, teach me to love like you,
        and remind me and the whole world how much you love us; how much God the Father and Jesus the Son love us.

        <b>\nOur Father.. \t\t10Hail Mary"'"s \t\tGlory be.."</b>

    </string>
    <string name="rosary_english_nativity">
        "Joseph and Mary go to Bethlehem to comply with the decree of Caesar Augustus.
        The hour for Mary to give birth is near, but there is no room in the inn.
        In the stillness of the night, the Savior is born in a cave, Mary remaining a Virgin.
        She wraps Him in swaddling clothes and lays Him in a manger.
        In unspeakable joy Mary gathers to her bosom the Flower of her virginity.
        Jesus enters the world in poverty to teach the lesson of detachment from earthly things.
        The angel announces to the shepherds: "Today there is born to you in the town of David a Savior, Who is Christ the Lord."
        The angelic chorus sing: "Glory to God in the highest, and peace to His people on earth."
        The shepherds come to the stable to pay homage to the Infant Jesus.
        The Magi come to adore the Holy Child and offer Him gifts.

        Dear Jesus, you were born in a poor place, because hotels couldn't give your mother and St. Joseph a place to have you.
        Even though you were Almighty and Son of God the Father, you didn't push or impose your power,
        you were born among the poor who welcomed you, in a stable, with the Shepherds.
        Please dear Jesus help me to be simple and gentle like you and God the Father,
        help me never to impose my will, power or strength on others. Help me to respect others,
        especially the poor. Mother Mary who had a baby in such an uncomfortable place,
        remind me to be calm no matter what turbulence I might find in this life.

        <b>\nOur Father.. \t\t10Hail Mary"'"s \t\tGlory be.."</b>

    </string>
    <string name="rosary_english_presentation">
        "Observing the law of Moses they take Jesus to the temple to present Him to the Lord.
        According to the Law the firstborn male child of every family should be consecrated to the Lord.
        Mary offers her Son to the Father, then ransoms Him back at the price paid by the poor.
        Jesus is not subject to the law of Moses, yet to teach obedience, submits to it.
        Mary is not subject to the law of purification, yet in humility she submits to it.
        God had revealed to Simeon that he would not see death until he had seen the Messiah.
        Recognizing the Child, he prays: "Now you can dismiss your servant in peace. You have fulfilled your word."
        "This Child is destined to be the downfall and rise of many in Israel, a sign that will be opposed."
        And to Mary Simeon reveals: "And your own soul a sword shall pierce."
        After they fulfill all the Law requires they return to Nazareth.

        Dear Jesus you respected the culture of blessings for children,
        and you inspired your parents to do the same as everyone else. And yet you were God Himself.
        Through the prayer of the Rosary, I am constantly reminded about your simplicity,
        your deep love for me and all of us. You came to live among us, and became like us,
        to teach us to live this life. Please help me to know how to love you back and
        to appreciate the sacrifice you made to leave Heaven and come on earth.
        Teach me to respect the law of my country and my church even when I feel opposed.

        <b>\nOur Father.. \t\t10Hail Mary"'"s \t\tGlory be.."</b>

    </string>
</resources>